--- a/Партнерам.html
+++ b/Партнерам.html
@@ -18,7 +18,7 @@
 		      </a>
 
 		      <ul class="nav nav-pills">
-		        <li class="nav-item"><a href="Главная.html" class="nav-link" aria-current="page">Главная</a></li>
+		        <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">Главная</a></li>
 		        <li class="nav-item"><a href="О компании.html" class="nav-link">О нас</a></li>
 		        <li class="nav-item"><a href="Партнерам.html" class="nav-link active">Для партнеров</a></li>
 		        </ul>
